# Clean-Music

./: .env  Cargo.toml  README.md
TEMPIMAGES/: cover_image_Ghost.html  cover_image_Hoy laid.html  cover_image_Leave the Bourbon on the Shelf.html
src/: main.css  main.js  main.rs  song_data.rs  song_determiner.rs  splashscreen.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  player.rs
src-tauri/src/player/: queue.rs
