[package]
name = "AppAttempt"
version = "0.1.0"
edition = "2021"

[dependencies]
babycat = "0.0.15"
chartlyrics = "0.3.1"
chromaprint = "0.2.0"
chrono = "0.4.42"
dotenv = "0.15.0"
eframe = "0.32.3"
egui = "0.32.1"
egui-file-dialog = "0.11.0"
futures = "0.3.31"
genius-rust = "0.1.1"
id3 = "1.16.3"
id3-image = "0.3.1"
image_search = "0.4.5"
infer = "0.19.0"
mp3-duration = "0.1.10"
musicbrainz = "0.1.0"
musicbrainz_rs = "0.12.0"
musicbrainz_rs_nova = "0.8.0"
regex = "1.12.1"
reqwest = { version = "0.12.23", features = ["blocking"] }
rodio = "0.21.1"
scraper = "0.24.0"
serde_json = "1.0.145"
symphonia = {version = "0.5.5"}
symphonium = "0.6.5"
tokio = { version = "1.47.1", features = ["full"] }

